<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_listado"
        tools:context=".ListadoFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/gray_500">

            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:text="@string/text_label_4"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_1"
                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_2"
                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_3"
                    />

            </com.google.android.material.tabs.TabLayout>

            <!-- Lista de elementos -->
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tabLayout"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/_action_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="540dp"
            android:contentDescription="@string/fab_content_desc"
            app:backgroundTint="?attr/colorPrimary"
            app:maxImageSize="65dp"
            app:shapeAppearanceOverlay="@style/RoundCornerShape"
            app:srcCompat="@drawable/add_24px"
            app:tint="@color/gray_500" />

</FrameLayout>
