<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/fragment_login"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Superior"
        android:layout_width="414dp"
        android:layout_height="495dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Inferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Brand_view"
            android:layout_width="440dp"
            android:layout_height="460dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fondo_alarmas_marca" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/Inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_500"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingrese_usuario"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_weight="1"
                android:text="@string/ingrese_usuario"
                android:textColor="@android:color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuario"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/gray_500"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="4dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="213dp"
                    android:layout_height="match_parent"
                    android:height="48dp"
                    android:outlineProvider="none" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="26dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingrese_contrasena"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_weight="1"
                android:text="@string/ingrese_contrasena"
                android:textColor="@color/white"
                app:endIconTint="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contrasena"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/gray_500"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="4dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="212dp"
                    android:layout_height="match_parent"
                    android:height="48dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:onClick="onLoginButtonClick"
            android:text="@string/login"
            android:textColor="@color/black"
            app:backgroundTint="@color/teal_100"
            app:shapeAppearance="@style/RoundedButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>